--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -13,7 +13,7 @@ jobs:
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
-      
+
       - name: Build and export to Docker
         uses: docker/build-push-action@v5
         with:
@@ -30,12 +30,23 @@ jobs:
 
   sast-scan:
     runs-on: ubuntu-latest
+    permissions:
+      security-events: write
+      contents: read
+      actions: read
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
 
       - name: Run Semgrep SAST Scan
-        uses: returntocorp/semgrep-action@v1
+        run: |
+          pip install semgrep 
+          semgrep scan --config auto --sarif --output semgrep.sarif || true
+
+      - name: Upload SARIF to Security Tab
+        uses: github/codeql-action/upload-sarif@v3
+        with:
+          sarif_file: "semgrep.sarif"
 
   sca-scan:
     runs-on: ubuntu-latest
@@ -52,17 +63,24 @@ jobs:
           out: "reports"
           args: "--disableYarnAudit"
 
-  container-scan: 
-      runs-on: ubuntu-latest 
-      needs: build 
-      steps: 
-        - name: Download artifact 
-          uses: actions/download-artifact@v4 
-          with: 
-            name: juice-shop-image 
-            path: /tmp 
-  
-        - name: Scan container image with Trivy 
-          uses: crazy-max/ghaction-container-scan@v3 
-          with: 
-            tarball: /tmp/juice-shop-image.tar 
+      - name: Upload SCA Report
+        uses: actions/upload-artifact@v4
+        with:
+          name: sca-report
+          path: reports/dependency-check-report.html
+
+  container-scan:
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Download artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: juice-shop-image
+          path: /tmp
+
+      - name: Scan container image with Trivy
+        uses: crazy-max/ghaction-container-scan@v3
+        with:
+          tarball: /tmp/juice-shop-image.tar
+          severity_threshold: "CRITICAL"
