feat(ci): SCA scan now turned as a passive gate

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -56,6 +56,7 @@ jobs:
 
       - name: Run OWASP Dependency-Check
         uses: dependency-check/Dependency-Check_Action@main
+        continue-on-error: true
         with:
           project: "juice-shop"
           path: "."
